--- a/刷题笔记.md
+++ b/刷题笔记.md
@@ -1,10 +1,10 @@
-## c++ STL基础
+# c++ STL基础
 
-### c++容器
+## c++容器
 
 ------
 
-- vector
+- ### vector
 
   - push_back：push_back参数为左值引用和右值引用，只能传实名对象还是匿名对象。
 
@@ -24,7 +24,7 @@
     emplace();
     ```
 
-- deque
+- ### deque
 
   - 比vector多了：
 
@@ -36,7 +36,7 @@
 
     
 
-- 映射：
+- ### 映射：
 
   | 映射               | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率 | 增删效率 |
   | ------------------ | -------- | -------- | ---------------- | ------------ | -------- | -------- |
@@ -98,7 +98,7 @@ top();
 
 
 
-###### sort函数
+### sort函数
 
 - ```c++
   //三个参数
@@ -116,7 +116,7 @@ top();
 
 
 
-###### priority_queue
+### priority_queue
 
 - ​	可以用vector, deque实现，但不能使用list，STL默认为vector
 
@@ -144,7 +144,7 @@ top();
 
   
 
-快排中的随机函数
+### 快排中的随机函数
 
 ```c++
 x = rand() % n; //获取[0, n)的随机数
@@ -154,12 +154,19 @@ x = rand() % n; //获取[0, n)的随机数
 
 ## 双指针
 
-- 快慢指针：一般解决原地修改数组。[删除链表的倒数第N个节点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)，[移除链表元素](https://leetcode-cn.com/problems/remove-linked-list-elements/)(需注意删除头节点和非头节点不一样)，[环形链表](https://leetcode-cn.com/problems/linked-list-cycle-ii/)（fast指针比slow指针快2倍），[替换空格](https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/)（先resize，从后往前的快慢指针）
-- 左右指针: [反转字符串](https://leetcode-cn.com/problems/reverse-string/)， [有序数组的平方](https://leetcode-cn.com/problems/squares-of-a-sorted-array/)，[三数之和](https://leetcode.cn/problems/3sum/)(准确来说是排序+三指针，每个指针记得去重)，[四数之和](https://leetcode.cn/problems/4sum/submissions/)(和三数之和一样，不过多层循环，每个指针去重，注意直接相加会溢出)
+- ### 快慢指针：
+
+  ​		一般解决原地修改数组。[删除链表的倒数第N个节点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)，[移除链表元素](https://leetcode-cn.com/problems/remove-linked-list-elements/)(需注意删除头节点和非头节点不一样)，[环形链表](https://leetcode-cn.com/problems/linked-list-cycle-ii/)（fast指针比slow指针快2倍），[替换空格](https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/)（先resize，从后往前的快慢指针）
+
+- [单链解题套路](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247492022&idx=1&sn=35f6cb8ab60794f8f52338fab3e5cda5&scene=21#wechat_redirect)
+
+- ### 左右指针:
+
+  ​	 [反转字符串](https://leetcode-cn.com/problems/reverse-string/)， [有序数组的平方](https://leetcode-cn.com/problems/squares-of-a-sorted-array/)，[三数之和](https://leetcode.cn/problems/3sum/)(准确来说是排序+三指针，每个指针记得去重)，[四数之和](https://leetcode.cn/problems/4sum/submissions/)(和三数之和一样，不过多层循环，每个指针去重，注意直接相加会溢出)
 
 ## 字符串
 
-- KMP
+- ### KMP
 
   - 求next数组
 
@@ -206,7 +213,7 @@ x = rand() % n; //获取[0, n)的随机数
 
 ## 回文串
 
-- [求最大回文串](https://leetcode.cn/problems/longest-palindromic-substring/)，[回文子串的数量](https://leetcode.cn/problems/palindromic-substrings/)
+- ### [求最大回文串](https://leetcode.cn/problems/longest-palindromic-substring/)，[回文子串的数量](https://leetcode.cn/problems/palindromic-substrings/)
 
   - DP，dp[i] [j]代表s[i]到是s[j]是否为回文串
 
@@ -370,5 +377,369 @@ x = rand() % n; //获取[0, n)的随机数
 
 - 仔细判断窗口收缩的条件，以及窗口内数据的更新。
 
+## 二叉树
 
+- ### 二叉树题目分类大纲：
+
+  ![img](https://img-blog.csdnimg.cn/20210219190809451.png)
+
+- ### 二叉树的定义以及遍历：
+
+  - ```c++
+    struct TreeNode {
+        int val;
+        TreeNode *left;
+        TreeNode *right;
+        TreeNode(): val(0), left(NULL), right(NULL){}
+        TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+    };
+    ```
+
+  - 前序遍历：
+
+    ```c++
+    // 递归：
+    void traversal(TreeNode* cur, vector<int>& vec) {
+            if (cur == NULL) return;
+            vec.push_back(cur->val);    // 中
+            traversal(cur->left, vec);  // 左
+            traversal(cur->right, vec); // 右
+        }
+    
+    // 迭代
+     vector<int> preorderTraversal(TreeNode* root) {
+            stack<TreeNode*> st;
+            vector<int> result;
+            if (root == NULL) return result;
+            st.push(root);
+            while (!st.empty()) {
+                TreeNode* node = st.top();                       // 中
+                st.pop();
+                result.push_back(node->val);
+                if (node->right) st.push(node->right);           // 右（空节点不入栈）
+                if (node->left) st.push(node->left);             // 左（空节点不入栈）
+            }
+            return result;
+        }
+    ```
+
+  - #### 中序遍历：
+
+    ```c++
+    // 递归
+    void traversal(TreeNode* cur, vector<int>& vec) {
+        if (cur == NULL) return;
+        traversal(cur->left, vec);  // 左
+        vec.push_back(cur->val);    // 中
+        traversal(cur->right, vec); // 右
+    }
+    
+    // 迭代
+    vector<int> inorderTraversal(TreeNode* root) {
+            vector<int> result;
+            stack<TreeNode*> st;
+            TreeNode* cur = root;
+            while (cur != NULL || !st.empty()) {
+                if (cur != NULL) { // 指针来访问节点，访问到最底层
+                    st.push(cur); // 将访问的节点放进栈
+                    cur = cur->left;                // 左
+                } else {
+                    cur = st.top(); // 从栈里弹出的数据，就是要处理的数据（放进result数组里的数据）
+                    st.pop();
+                    result.push_back(cur->val);     // 中
+                    cur = cur->right;               // 右
+                }
+            }
+            return result;
+        }
+    ```
+
+  - #### 后序遍历：
+
+    ```c++
+    // 递归
+    void traversal(TreeNode* cur, vector<int>& vec) {
+        if (cur == NULL) return;
+        traversal(cur->left, vec);  // 左
+        traversal(cur->right, vec); // 右
+        vec.push_back(cur->val);    // 中
+    }
+    
+    // 迭代
+        vector<int> postorderTraversal(TreeNode* root) {
+            stack<TreeNode*> st;
+            vector<int> result;
+            if (root == NULL) return result;
+            st.push(root);
+            while (!st.empty()) {
+                TreeNode* node = st.top();
+                st.pop();
+                result.push_back(node->val);
+                if (node->left) st.push(node->left); // 相对于前序遍历，这更改一下入栈顺序 （空节点不入栈）
+                if (node->right) st.push(node->right); // 空节点不入栈
+            }
+            reverse(result.begin(), result.end()); // 将结果反转之后就是左右中的顺序了
+            return result;
+        }
+    ```
+
+  - #### 层序遍历：
+
+    ```c++
+        vector<vector<int>> levelOrder(TreeNode* root) {
+            queue<TreeNode*> que;
+            if (root != NULL) que.push(root);
+            vector<vector<int>> result;
+            while (!que.empty()) {
+                int size = que.size();
+                vector<int> vec;
+                // 这里一定要使用固定大小size，不要使用que.size()，因为que.size是不断变化的
+                for (int i = 0; i < size; i++) {
+                    TreeNode* node = que.front();
+                    que.pop();
+                    vec.push_back(node->val);
+                    if (node->left) que.push(node->left);
+                    if (node->right) que.push(node->right);
+                }
+                result.push_back(vec);
+            }
+            return result;
+        }
+    ```
+  
+- #### 统一的迭代写法
+
+  ```c++
+  // 模拟递归的场景
+      stack<TreeNode*> st;
+      vector<int> result;
+      vector<int> preorderTraversal(TreeNode* root) {
+          TreeNode* visited = new TreeNode();
+  
+          addLeftNode(root);
+          while(!st.empty()){
+              TreeNode* node = st.top();
+  
+              if ((node->left == NULL || node->left == visited) && node->right != visited){
+                  //中序代码
+                  addLeftNode(node->right);
+              }
+  
+              if (node->right == NULL || node->right == visited){
+                  // 后序代码位子
+                  visited = node;
+                  st.pop();
+              }
+          }
+          return result;
+      }
+  
+       void addLeftNode(TreeNode* root){
+           while(root){
+               //前序代码位子
+               result.push_back(root->val);
+               cout << root->val <<endl;
+               st.push(root);
+               root = root->left;
+           }
+       }
+  ```
+
+  
+
+- #### 最近公共祖先问题
+
+  ```c++
+  // 定义：在以 root 为根的二叉树中寻找值为 val1 或 val2 的节点
+  TreeNode find(TreeNode root, int val1, int val2) {
+      // base case
+      if (root == null) {
+          return null;
+      }
+      // 前序位置，看看 root 是不是目标值
+      if (root.val == val1 || root.val == val2) {
+          return root;
+      }
+      // 去左右子树寻找
+      TreeNode left = find(root.left, val1, val2);
+      TreeNode right = find(root.right, val1, val2);
+      // 后序位置，已经知道左右子树是否存在目标值
+  
+      return left != null ? left : right;
+  }
+  
+  //以上代码只有遇到val1和val2才会返回非null的节点。
+  
+  //二叉树的最近公共祖先
+  TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+      return find(root, p.val, q.val);
+  }
+  
+  // 在二叉树中寻找 val1 和 val2 的最近公共祖先节点, 确保二叉数一定存在val1和val2
+  TreeNode find(TreeNode root, int val1, int val2) {
+      if (root == null) {
+          return null;
+      }
+      // 前序位置
+      if (root.val == val1 || root.val == val2) {
+          // 如果遇到目标值，直接返回
+          return root;
+      }
+      TreeNode left = find(root.left, val1, val2);
+      TreeNode right = find(root.right, val1, val2);
+      // 后序位置，已经知道左右子树是否存在目标值
+      if (left != null && right != null) {
+          // 当前节点是 LCA 节点
+          return root;
+      }
+  
+      return left != null ? left : right;
+  }
+  
+  // 在二叉搜索树中 找最近公共祖先节点
+      TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
+          while(root){
+              if (root->val > p->val && root->val > q->val)
+                  root = root->left;
+              else if(root->val < p->val && root->val < q->val)
+                  root = root->right;
+              else return root;
+          }
+          return NULL;
+      }
+  ```
+
+  - 还有许多情况下的公共祖先问题，参考：https://mp.weixin.qq.com/s/njl6nuid0aalZdH5tuDpqQ
+
+- #### 构造二叉树
+
+  ```c++
+  // 简易版：先找后序，再找中序，注意边界，左右子树递归时边界需统一  
+  // 升级版：用Map储存中序遍历的值和下表，直接查就不需要for循环    
+  TreeNode* buildTree(vector<int>& inorder, vector<int>& postorder) {
+      	/*
+      	for (int i=0; i<inorder.size(); i++){
+              mp[inorder[i]]=i;
+          }
+      	*/
+          return build(inorder, 0, inorder.size()-1, postorder, 0, postorder.size()-1);
+      }
+  	
+      TreeNode* build(vector<int>& inorder, int inStart, int inEnd, vector<int>& postorder, int postStart, int postEnd){
+          if (postEnd < postStart)    return NULL;
+  
+          int rootVal = postorder[postEnd];
+          int index = 0;
+          // int index = mp[rootVal];
+          for (int i=inStart; i<=inEnd; i++){
+              if (inorder[i] == rootVal){
+                  index = i;
+                  break;
+              }
+          }
+  
+          int leftsize = index - inStart;
+  
+          TreeNode* root = new TreeNode(rootVal);
+          root->left = build(inorder, inStart, index-1, postorder, postStart, postStart+leftsize-1);
+          root->right = build(inorder, index+1, inEnd, postorder, postStart+leftsize, postEnd-1);
+          return root;
+      }
+```
+  
+  - 更多构造查看：https://labuladong.github.io/algo/2/19/35/
+  
+- #### 二叉树的序列化与反序列化
+  ```c++
+  class Codec {
+  public:
+      // Encodes a tree to a single string.
+      string serialize(TreeNode* root) {
+          if(root==nullptr){
+              return "#";
+          }
+          return to_string(root->val) + ' ' + serialize(root->left) + ' ' + serialize(root->right);
+      }
+  
+  
+      // Decodes your encoded data to tree.
+      TreeNode* deserialize(string data) {
+          istringstream ss(data);
+          return mydeserialize(ss);
+      }
+      TreeNode* mydeserialize(istringstream& data){
+          string tmp;
+          data >> tmp;
+          if (tmp == "#")
+              return NULL;
+          cout << tmp;
+          TreeNode* root = new TreeNode(stoi(tmp));
+          root->left = mydeserialize(data);
+          root->right = mydeserialize(data);
+          return root;
+      }
+    
+  };
+  // 反序列化中序无法实现
+  ```
+  - https://mp.weixin.qq.com/s/DVX2A1ha4xSecEXLxW_UsA
+
+- #### 二叉树
+  - BST 中序遍历就是升序排序结果
+
+    ```c++
+    class TreeNode {
+        int val;
+        // 以该节点为根的树的节点总数
+        int size;
+        TreeNode left;
+        TreeNode right;
+    }
+    // 有了 size 字段，外加 BST 节点左小右大的性质，对于每个节点 node 就可以通过 node.left 推导出 node 的排名，从而做到我们刚才说到的O(logn)。
+    ```
+
+  - BST递归框架：
+
+    ```c++
+    void BST(TreeNode root, int target) {
+        if (root.val == target)
+            // 找到目标，做点什么
+        if (root.val < target) 
+            BST(root.right, target);
+        if (root.val > target)
+            BST(root.left, target);
+    ```
+
+    BST的增删查改：https://labuladong.github.io/algo/2/19/40/
+
+  - 不同的二叉树
+
+    ```c++
+        vector<vector<int>> memo;
+        int numTrees(int n) {
+            memo.resize(n+1, vector<int>(n+1, 0));
+            return count(1, n);
+        }
+    
+        int count(int left, int right){
+            if (left > right) return 1;
+    
+            if (memo[left][right] != 0){
+                return memo[left][right];
+            }
+            int res = 0;
+            for (int i=left; i<=right; i++){
+                int leftNum = count(left, i-1);
+                int rightNum = count(i+1, right);
+                res += leftNum*rightNum;
+            }
+            
+            memo[left][right] = res;
+            return res;
+        }
+    ```
+
+    https://mp.weixin.qq.com/s/kcwz2lyRxxOsC3n11qdVSw
+
+- 
 
