--- a/刷题笔记.md
+++ b/刷题笔记.md
@@ -645,6 +645,7 @@ x = rand() % n; //获取[0, n)的随机数
           root->right = build(inorder, index+1, inEnd, postorder, postStart+leftsize, postEnd-1);
           return root;
       }
+  ```
 ```
   
   - 更多构造查看：https://labuladong.github.io/algo/2/19/35/
@@ -681,7 +682,7 @@ x = rand() % n; //获取[0, n)的随机数
     
   };
   // 反序列化中序无法实现
-  ```
+```
   - https://mp.weixin.qq.com/s/DVX2A1ha4xSecEXLxW_UsA
 
 - #### 二叉树
@@ -741,5 +742,21 @@ x = rand() % n; //获取[0, n)的随机数
 
     https://mp.weixin.qq.com/s/kcwz2lyRxxOsC3n11qdVSw
 
-- 
 
+## 动态规划
+
+### DP题目大纲
+
+![img](https://code-thinking.cdn.bcebos.com/pics/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92-%E6%80%BB%E7%BB%93%E5%A4%A7%E7%BA%B21.jpg)
+
+- DP 五部曲
+
+  - 确定dp数组（dp table）以及下标的含义，确定base case。
+  - 确定递推公式
+  - dp数组如何初始化
+  - 确定遍历顺序
+  - 举例推导dp数组
+
+  ### 
+
+  
