--- a/刷题笔记.md
+++ b/刷题笔记.md
@@ -10,6 +10,8 @@
 
   - emplace_back：emplace_back参数为一个参数包，可以通过参数来直接构造对象，也可以通过参数来直接构造对象。
 
+  - 如果要将一个临时变量push到容器的末尾，push_back()需要先构造临时对象，再将这个对象拷贝到容器的末尾，而emplace_back()则直接在容器的末尾构造对象，这样就省去了拷贝的过程。
+
   - https://blog.csdn.net/bureau123/article/details/123417471
 
     ```c++
@@ -645,13 +647,11 @@ x = rand() % n; //获取[0, n)的随机数
           root->right = build(inorder, index+1, inEnd, postorder, postStart+leftsize, postEnd-1);
           return root;
       }
-  ```
-```
-  
   - 更多构造查看：https://labuladong.github.io/algo/2/19/35/
-  
+  ```
 - #### 二叉树的序列化与反序列化
-  ```c++
+
+```c++
   class Codec {
   public:
       // Encodes a tree to a single string.
@@ -683,6 +683,7 @@ x = rand() % n; //获取[0, n)的随机数
   };
   // 反序列化中序无法实现
 ```
+
   - https://mp.weixin.qq.com/s/DVX2A1ha4xSecEXLxW_UsA
 
 - #### 二叉树
@@ -750,13 +751,292 @@ x = rand() % n; //获取[0, n)的随机数
 ![img](https://code-thinking.cdn.bcebos.com/pics/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92-%E6%80%BB%E7%BB%93%E5%A4%A7%E7%BA%B21.jpg)
 
 - DP 五部曲
-
   - 确定dp数组（dp table）以及下标的含义，确定base case。
   - 确定递推公式
   - dp数组如何初始化
   - 确定遍历顺序
   - 举例推导dp数组
 
-  ### 
+
+
+### 子序列解题模板
+
+- 首先，子序列问题对于子串、子数组更加困难，因为前者是不连续的序列，而后两者是连续的。
+
+- 两种思路：
+
+  - 一维的dp数组：在子数组nums[0..i]中，定义子序列(最长递增子序列)的长度为dp[i]，即nums[i]结尾的的子序列最长长度。[最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
+
+    ```c++
+    int n = nums.size();
+    vector<int> dp(n, 0); // 初始化
+    for (int i=0; i<n; i++){
+        for (int j=0; j<i; j++){
+            if (...)
+            	dp[i] = 最值(dp[i], dp[j] + ...)
+        }
+    }
+    ```
+
+  - 二维dp数组：
+
+    - 涉及两个字符串/数组的场景，dp数组定义：在子数组nums[0...i-1]和子数组[0...j-1]中，子序列长度为dp\[i][j]。[最长公共子序列](https://leetcode.cn/problems/longest-common-subsequence/)、[编辑距离](https://leetcode.cn/problems/edit-distance/)
+    - 只涉及一个字符串/数组的场景，dp数组定义：在子数组nums[i...j]中，子序列长度为dp\[i][j]。[最长回文子序列](https://leetcode.cn/problems/longest-palindromic-subsequence/)
+
+    ```c++
+    int n = nums.size();
+    vector<int> dp(n, 0); //初始化
+    for (int i=0; i<n; i++){
+        for (int j=0; j<n; j++){
+            if (nums[i] == nums[j])
+                dp[i][j] = dp[i][j] + ...
+             else 
+                 dp[i][j] = 最值(...)
+        }
+    }
+    ```
+
+- 进阶：如求出最长公共子序列，而非长度，[最长公共子序列二](https://www.nowcoder.com/practice/6d29638c85bb4ffd80c020fe244baf11?tpId=295&tqId=991075&ru=/exam/oj&qru=/ta/format-top101/question-ranking&sourceUrl=%2Fexam%2Foj)
+
+### 股票问题
+
+- [卖股票的最佳时机](https://www.programmercarl.com/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92-%E8%82%A1%E7%A5%A8%E9%97%AE%E9%A2%98%E6%80%BB%E7%BB%93%E7%AF%87.html#%E5%8D%96%E8%82%A1%E7%A5%A8%E7%9A%84%E6%9C%80%E4%BD%B3%E6%97%B6%E6%9C%BA)
+
+### 背包问题总结
+
+- [背包问题总结](https://www.programmercarl.com/%E8%83%8C%E5%8C%85%E6%80%BB%E7%BB%93%E7%AF%87.html#%E8%83%8C%E5%8C%85%E9%80%92%E6%8E%A8%E5%85%AC%E5%BC%8F)
+
+
+
+## 回溯
+
+[回溯总结](https://www.programmercarl.com/%E5%9B%9E%E6%BA%AF%E6%80%BB%E7%BB%93.html#%E7%BB%84%E5%90%88%E9%97%AE%E9%A2%98-2)
+
+## 图论
+
+- BFS：[课程表](https://leetcode.cn/problems/course-schedule/)
+
+  ```c++
+  class Solution {
+  public:
+      vector<vector<int>> edges;
+      vector<int> indeg;
+  
+      bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
+          edges.resize(numCourses);
+          indeg.resize(numCourses);
+          for (auto pre : prerequisites){
+              edges[pre[1]].push_back(pre[0]);
+              indeg[pre[0]]++;
+          }
+          queue<int> que;
+          for (int i=0; i<numCourses; i++){
+              if (indeg[i] == 0){
+                  que.push(i);
+              }
+          }
+          int count = 0;
+          while(!que.empty()){
+              int u = que.front();
+              que.pop();
+              count++;
+              for (int v : edges[u]){
+                  indeg[v]--;
+                  if (indeg[v] == 0)
+                      que.push(v);
+              }
+          }
+  
+          return count == numCourses; 
+      }
+  };
+  ```
+
+- DFS
+
+  ```c++
+  class Solution {
+  public:
+      vector<vector<int>> edges;
+      vector<int> valid;
+      bool flag = true;
+      
+      void dfs(int v){
+          visit[v] = 1;
+          for (int i : edges[v]){
+              if (!valid[i]){
+                  dfs(i);
+                  if (!flag)
+                      return;
+              }else if (valid[i] == 1){
+                  flag = false;
+                  return;
+              }
+          }
+          valid[v] = 2;
+      }
+  
+      bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
+          edges.resize(numCourses);
+          valid.resize(numCourses);
+          for (auto pre : prerequisites){
+              edges[pre[1]].push_back(pre[0]);
+          }
+  
+          for (int i=0; i<numCourses && flag; i++){
+              if (!visit[i]){
+                  dfs(i);
+              }
+          }
+          return flag; 
+      }
+  };
+  ```
+
+## 排序
+
+- 排序稳定性：
+
+  ![在这里插入图片描述](https://img-blog.csdnimg.cn/38ceb232f6314d3a8e71658d769c43f7.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBASEh-TEw=,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+- 快排
+
+  ```c++
+  class Solution {
+  public:
+      vector<int> sortArray(vector<int>& nums) {
+          sort(nums, 0, nums.size()-1);
+          return nums;
+      }
+  
+      void sort(vector<int>& nums, int left, int right){
+          if (left >= right)
+              return;
+         int p = partition(nums, left, right);
+         sort(nums, left, p-1);
+         sort(nums, p+1, right);
+      }
+  
+      int partition(vector<int>& nums, int left, int right){
+          int begin = left;
+          swap(nums[left], nums[left+rand()%(right-left)]);
+  
+          while(left < right){
+              while(right>left && nums[right] >  nums[begin]){
+                  right--;
+              }
+              while( left <right && nums[left] <= nums[begin]){
+                  left++;
+              }
+              swap(nums[left], nums[right]);
+          }
+  
+          swap(nums[left], nums[begin]);
+          return left;
+      }
+  };
+  ```
+
+- 归并排序
+
+  ```c++
+  class Solution {
+  public:
+      vector<int> tmp;
+      vector<int> sortArray(vector<int>& nums) {
+          tmp.resize(nums.size());
+          sort(nums, 0, nums.size()-1);
+          return nums;
+      }
+  
+      void sort(vector<int>& nums, int left, int right){
+          if (left >= right)
+              return;
+          int mid = left + (right - left) / 2;
+          sort(nums, left, mid);
+          sort(nums, mid+1, right);
+          merge(nums, left, mid, right);
+      }
+  
+      void merge(vector<int>& nums, int left, int mid, int right){
+          for (int i=left; i<=right; i++){
+              tmp[i] = nums[i];
+          }
+  
+          int i = left, j = mid+1;
+          for (int p = left; p<=right; p++){
+              if (i == mid + 1)
+                  nums[p] = tmp[j++];
+              else if (j == right + 1)
+                  nums[p] = tmp[i++];
+              else if (tmp[i] < tmp[j])
+                  nums[p] = tmp[i++];
+              else
+                  nums[p] = tmp[j++];
+          }
+      }
+  };
+  ```
+
+- 堆排序
+
+  ```c++
+  class Solution {
+  public:
+      vector<int> sortArray(vector<int>& nums) {
+          build_heap(nums, nums.size());
+          return nums;
+      }
+  
+      void max_heap(vector<int>& nums, int left, int right){
+          int parent = left, child = parent * 2 + 1;
+  
+          while(child <= right){
+              if (child+1 <= right && nums[child] < nums[child+1])
+                  child++;
+              
+              if (nums[parent] > nums[child])
+                  return;
+              else{
+                  swap(nums[parent], nums[child]);
+                  parent = child;
+                  child = parent * 2 + 1;
+              }
+          }
+      }
+  
+      void build_heap(vector<int>& nums, int len){
+          // 建堆
+          for (int i= len / 2 - 1; i>=0; i--){
+              max_heap(nums, i, len-1);
+          }
+  
+          // 排序
+          for (int i=len-1; i>=0; i--){
+              swap(nums[0], nums[i]);
+              max_heap(nums, 0, i-1);
+          }
+      }
+  };
+  ```
+
+- 希尔排序
+
+  ```c++
+      //希尔
+      void ShellSort(vector<int>& nums,int n){
+          for(int dk = n/2; dk>=1; dk=dk/2){
+              for(int i=dk; i<n; ++i) {
+                  if(nums[i] < nums[i-dk]){
+                      int tmp = nums[i],j;
+                      for(j = i-dk; j>=0&&tmp<nums[j]; j-=dk){
+                          nums[j+dk] = nums[j];
+                      }
+                      nums[j+dk]=tmp;
+                  }
+              }
+          }
+      }
+  ```
 
   
