--- a/量化与压缩.md
+++ b/量化与压缩.md
@@ -1,3 +1,7 @@
+# Cuda
+
+# TensorRt
+
 # 量化
 
 ## 量化目的
@@ -107,4 +111,8 @@
   res = model_int8(input_fp32)
   ```
 
-- 量化意识训练：在极少数情况下，训练后量化不能提供足够的准确性，可以使用torch.quantization.FakeQuantize函数通过模拟量化来进行训练。
+- 量化意识训练：在极少数情况下，训练后量化不能提供足够的准确性，可以使用torch.quantization.FakeQuantize 函数通过模拟量化来进行训练。
+
+# 模型压缩
+
+https://zhuanlan.zhihu.com/p/395228490
