--- a/刷题笔记.md
+++ b/刷题笔记.md
@@ -8,7 +8,7 @@
 
   - push_back：push_back参数为左值引用和右值引用，只能传实名对象还是匿名对象。
 
-  - emplace_back：emplace_back参数为一个参数包，可以通过参数来直接构造对象，也可以通过参数来直接构造对象。
+  - emplace_back：emplace_back参数为一个参数包，**可以通过参数来直接构造对象**，也可以通过参数来直接构造对象。
 
   - 如果要将一个临时变量push到容器的末尾，push_back()需要先构造临时对象，再将这个对象拷贝到容器的末尾，而emplace_back()则直接在容器的末尾构造对象，这样就省去了拷贝的过程。
 
@@ -53,8 +53,25 @@
   | std::set           | 红黑树                                                     | 有序     | 否               | 否           | O(log n) | O(log n) |
   | std::multiset      | 红黑树                                                     | 有序     | 是               | 否           | O(logn)  | O(logn)  |
   | std::unordered_set | [哈希表](https://leetcode-cn.com/problems/reverse-string/) | 无序     | 否               | 否           | O(1)     | O(1)     |
+  
+  -  哈希表冲突处理方法：处理冲突的方法很多，后面我们介绍**拉链法**和**线性探索法**。
+  
+- set添加自定义数据结构需重载<运算符
 
+  ```c++
+  struct A
+  {
+  	int age;
+  	string name;
+  
+  	bool operator<(const A &b) const
+  	{
+  		return age < b.age;
+  	}
+  };
+  ```
 
+  
 
 ## C++容器适配器
 
