--- a/面经.md
+++ b/面经.md
@@ -29,9 +29,14 @@
         A(int i){
             cout << "A Construct ..." << endl;
         };
-        A(const A &obj){
+        A(const A &obj){ //拷贝构造函数
     
         };
+        
+        A(A &&obj){ //移动构造函数
+            
+        };
+        
         ~A(){
             cout << "A Construct delete..." << endl;
         };
@@ -78,11 +83,270 @@
   private:
       A(){}
       ~A(){}
-      A(A const& a);
-      A& operator = (A const &a);
-  };
+      A(const A &a);
+      A& operator = (A const &a){
+          ...
+          return *this;
+      };
+};
   
   ```
-
+  
   - https://blog.csdn.net/u010993820/article/details/80968933/ (几种设计模式)
   - https://blog.csdn.net/weixin_43778179/article/details/105073150（单例模式）
+
+## 关键字用法
+
+### volatile
+
+- volatile 关键字是一种类型修饰符，**用它声明的类型变量表示可以被某些编译器未知的因素更改**，比如：操作系统、硬件或者其它线程等。遇到这个关键字声明的变量，编译器对访问该变量的代码就不再进行优化，从而可以提供对特殊地址的稳定访问。
+- 当要求使用 volatile 声明的变量的值的时候，**系统总是重新从它所在的内存读取数据**，即使它前面的指令刚刚从该处读取过数据。
+- **volatile定义变量的值是易变的，每次用到这个变量的值的时候都要去重新读取这个变量的值，而不是读寄存器内的备份。多线程中被几个任务共享的变量需要定义为volatile类型。**
+
+### **mutable**
+
+- mutable的中文意思是“可变的，易变的”，跟constant（既C++中的const）是反义词。在C++中，mutable也是为了突破const的限制而设置的。被mutable修饰的变量，将永远处于可变的状态，即使在一个const函数中。我们知道，如果类的成员函数不会改变对象的状态，那么这个成员函数一般会声明成const的。但是，有些时候，我们需要**在const函数里面修改一些跟类状态无关的数据成员，那么这个函数就应该被mutable来修饰，并且放在函数后后面关键字位置**。
+
+### **explicit**
+
+- explicit关键字用来修饰类的构造函数，被修饰的构造函数的类，不能发生相应的隐式类型转换，只能以**显示的方式进行类型转换**，注意以下几点：
+  - explicit 关键字只能用于类内部的构造函数声明上
+  - explicit 关键字作用于单个参数的构造函数
+  - 被explicit修饰的构造函数的类，不能发生相应的隐式类型转换
+
+### const
+
+- 不考虑类的情况
+
+  - const常量在定义时必须初始化，之后无法更改
+  - const形参可以接收const和非const类型的实参
+  - 常函数：常函数内不能修改普通成员变量，可以修改mutable变量，由于常函数只能读取数据成员(除mutatble声明的之外)而不能修改，所以可以保证数据的安全。
+
+- 考虑类的情况
+
+  - const成员变量：不能在类定义外部初始化，只能通过构造函数初始化列表进行初始化，并且必须有构造函数；不同类对其const数据成员的值可以不同，所以不能在类中声明时初始化
+
+  - const成员函数：const对象不可以调用非const成员函数；非const对象都可以调用；不可以改变非mutable（用该关键字声明的变量可以在const成员函数中被修改）数据的值。
+
+  - **常函数和虚函数并不冲突，可以将常函数定义为虚函数**
+
+    - ```c++
+      class D{
+      public:
+          virtual void Print()const  {cout<<"D"<<endl;}
+      
+      };
+      
+      class DD:public  D{
+          public:
+          void Print()const override{cout<<"DD"<<endl;}
+      };
+      ```
+
+    - 基类和派生类都要一起带上const，如果派生类中没有则不认为该函数进行了override。
+
+## 定义一个模板函数
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+
+template<typename type1, typename type2>
+type1 Max(type1 a, type2 b){
+    return a > b ? a:b;
+}
+
+int main(){
+    cout << "Max :" << Max(5.5, 'a') << endl;
+
+    return 0;
+}
+```
+
+## 并发模式中的同步和异步
+
+- 同步指的是程序完全按照代码序列的顺序执行
+- 异步指的是程序的执行需要由系统事件驱动
+
+## C++从代码到可执行程序经历什么？
+
+- 预处理：主要处理源代码文件中的以“#”开头的预编译指令。
+- 编译：把预编译之后生成的xxx.i或xxx.ii文件，进行一系列词法分析、语法分析、语义分析及优化后，生成相应 的汇编代码文件。
+- 汇编：将汇编代码转变成机器可以执行的指令(机器码文件)，经汇编之后，产生目标文件(与可执行文件格式几乎一样)xxx.o(Linux 下)、xxx.obj(Window下)。
+- 链接：将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。
+
+## 静态链接和动态链接
+
+- 静态链接：是在 **装载之前**，就完成所有的符号引用的一种链接方式；在生成可执行文件的时候（链接阶段），把所有需要的函数的二进制代码都包含到可执行文件中去。
+  - 优点：在程序发布的时候就不需要依赖库，程序可独立运行，运行速度快。
+  - 缺点：浪费内存空间，内存中可能存在多个相同的公共库函数；更新困难。
+- 动态链接：是把程序按照模块拆分成各个相对独立部分，在程序运行时才将它们链接在一起形 成一个完整的程序，而不是像静态链接一样把所有程序模块都链接成一个单独的可执行文件。
+  - 优点：更新方便，更适应现代的大规模的软件开发；共享库：就是即使需要每个程序都依赖同一个库，但是该库不会像静态链接那样在内存中存在多份副本，而是这多个程序在执行时共享同一份副本。
+  - 缺点：结构复杂，程序运行性能下降。
+
+## 生产者-消费者模式
+
+```c++
+#include <semaphore>
+
+semaphore mutex = 1;
+semaphore empty = n;
+semaphore full = 0;
+
+void producter(){
+    while(True){
+        P(empty);
+        P(mutex);
+        // 生成资源
+        V(mutex);
+        V(full)；
+    }
+}
+
+void consumer(){
+    while(True){
+        P(full);
+        P(mutex);
+        // 消耗资源
+        V(mutex);
+        V(empty);
+    }
+}
+
+```
+
+## 读写模式
+
+```c++
+// 公平竞争、允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
+// 此外还有写优先和读优先。
+typedef int semaphore;
+semaphore count_mutex = 1;
+semaphore data_mutex = 1;
+semaphore flag = 1;
+int count = 0;
+
+void reader() {
+    while(TRUE) {
+        P(&flag);
+        P(&count_mutex);
+        
+        count++;
+        if(count == 1) P(&data_mutex); // 第一个读者需要对数据进行加锁，防止写进程访问
+        V(&count_mutex);
+        V(&flag);
+        
+        read();
+        
+        P(&count_mutex);
+        count--;
+        if(count == 0) V(&data_mutex);//最后一个读者要对数据进行解锁，防止写进程无法访问
+        P(&count_mutex);
+    }
+}
+
+void writer() {
+    while(TRUE) {
+        P(&flag);
+        P(&data_mutex);
+        
+        write();
+        
+        V(&data_mutex);
+        V(&flag);
+    }
+}
+```
+
+
+
+## lambda表达式
+
+- 利用lambda表达式可以编写内嵌的匿名函数，用以替换独立函数或者函数对象；
+
+- 每当你定义一个lambda表达式后，编译器会自动生成一个匿名类（这个类当然重载了()运算符），我们称为闭包类型（closure type）。那么在运行时，这个lambda表达式就会返回一个匿名的闭包实例，其实一个右值。所以，我们上面的lambda表达式的结果就是一个个闭包。闭包的一个强大之处是其可以通过传值或者引用的方式捕捉其封装作用域内的变量，前面的方括号就是用来定义捕捉模式以及变量，我们又将其称为lambda捕捉块。
+
+- ```c++
+  [capture] （parameters） mutable ->return-type {statement};
+  []        //不捕获任何外部变量；
+  [=]       //表示外部参数直接传值
+  [&]       //表示外部参数传引用，可修改值。当默认捕获符是 & 时，后继的简单捕获符必须不以 & 开始。而当默认捕获符是 = 时，后继的简单捕获符必须以 & 开始。
+  [x, &y]   //x is captured by value, y is captured by reference
+  [&, x]    //x is explicitly captured by value. Other variables will be captured by reference
+  [=, &z]   //z is explicitly captured by reference. Other variables will be captured by value
+  ```
+
+- lambda必须使用尾置返回来指定返回类型，可以忽略参数列表和返回值，但必须永远包含捕获列表和函数体。
+
+## TCP Option字段
+
+![TCP option 选项 - 窗口扩展](https://cdn.xiaolincoding.com/gh/xiaolincoder/ImageHost/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/TCP-%E5%8F%82%E6%95%B0/TCP%20option%E5%AD%97%E6%AE%B5-%E7%AA%97%E5%8F%A3.png)
+
+## TCP
+
+- Keepalive：**TCP 的保活机制**
+- RTT 往返时延，MSL 与 TTL 的区别：MSL 的单位是时间，而 TTL 是经过路由跳数。所以 **MSL 应该要大于等于 TTL 消耗为 0 的时间**，以确保报文已被自然消亡。
+- TIME_WAIT 状态：TIME_WAIT 是「主动关闭方」断开连接时的最后一个状态，该状态会持续 **2MSL(Maximum Segment Lifetime)\*** 时长(比如 Linux 默认为 30 秒，那么 2MSL 就是 60 秒。)，之后进入CLOSED 状态。 
+  - 防止历史连接中的数据，被后面相同四元组的连接错误的接收；
+  - 保证「被动关闭连接」的一方，能被正确的关闭
+- net.ipv4.tcp_tw_reuse：如果开启该选项的话，客户端（连接发起方） 在调用 connect() 函数时，**内核会随机找一个 TIME_WAIT 状态超过 1 秒的连接给新的连接复用**，所以该选项只适用于连接发起方。
+- net.ipv4.tcp_tw_recycle：如果开启该选项的话，允许处于 TIME_WAIT 状态的连接被快速回收，该参数在 NAT 的网络下是不安全的！在 Linux 4.12 版本后，直接取消了这一参数。
+- net.ipv4.tcp_timestamps：加上 tcp_tw_reuse，意味着可以用时间戳的方式有效的判断回绕序列号的历史报文。
+- per-host 的 PAWS 机制：开启了 recycle 和 timestamps 选项，就会开启一种叫 per-host 的 PAWS (Protect Against Wrapped Sequence) 机制，它的作用是防止 TCP 包中的序列号发生绕回。**per-host 是对「对端 IP 做 PAWS 检查」**，而非对「IP + 端口」四元组做 PAWS 检查。
+
+## HTTP
+
+- HTTP 1.0
+  - **短链接** ：每发起一个请求，都要新建一次 TCP 连接（三次握手），而且是串行请求，做了无谓的 TCP 连接建立和断开，增加了通信开销。
+- HTTP 1.1
+  - **长连接**( 使用Keep-Alive)：只要任意一端没有明确提出断开连接，则保持 TCP 连接状态。减少了 TCP 连接的重复建立和断开所造成的额外开销，减轻了服务器端的负载。
+  - **管道网络传输**：同一个 TCP 连接里面，客户端可以发起多个请求，只要第一个请求发出去了，不必等其回来，就可以发第二个请求出去，可以**减少整体的响应时间。**
+  - **性能瓶颈** ：
+    - 请求 / 响应头部（Header）未经压缩就发送，首部信息越多延迟越大。只能压缩 `Body` 的部分
+    - 发送冗长的首部。每次互相发送相同的首部造成的浪费较多；
+    - 服务器是按请求的顺序响应的，如果服务器响应慢，会招致客户端一直请求不到数据，也就是队头阻塞；
+    - 没有请求优先级控制
+    - 请求只能从客户端开始，服务器只能被动响应。
+- HTTP /2 (基于 HTTPS)：
+  - **头部压缩**：如果你同时发出多个请求，他们的头是一样的或是相似的，那么，协议会帮你**消除重复的部分**。**HPACK算法**：在客户端和服务器同时维护一张头信息表，所有字段都会存入这个表，生成一个索引号，以后就不发送同样字段了，只发送索引号，这样就**提高速度**了。
+  - **二进制格式**：HTTP/2 不再像 HTTP/1.1 里的纯文本形式的报文，而是全面采用了**二进制格式**，并且统称为帧（frame）：**头信息帧（Headers Frame）和数据帧（Data Frame）**，**增加了数据传输的效率**。
+  - **数据流**：在 HTTP/2 中每个请求或响应的所有数据包，称为一个数据流（`Stream`）。每个数据流都标记着一个独一无二的编号（Stream ID），**不同 Stream 的帧是可以乱序发送的（因此可以并发不同的 Stream ）**，因为每个帧的头部会携带 Stream ID 信息，所以接收端可以通过 Stream ID 有序组装成 HTTP 消息。
+  - **多路复用**：可以在**一个连接中并发多个请求或回应，而不用按照顺序一一对应**，在HTTP层面解决了队头阻塞问题。
+  - **服务器推送**：可以**主动**向客户端发送消息。
+- HTTP /3：
+  - **HTTP/3 把 HTTP 下层的 TCP 协议改成了 UDP！**
+  - 基于 UDP 的 **QUIC 协议** 可以实现类似 TCP 的可靠性传输。
+    - *无队头阻塞*：**当某个流发生丢包时，只会阻塞这个流，其他流不会受到影响，因此不存在队头阻塞问题**。
+    - *更快的连接建立*：QUIC 内部包含了 TLS，它在自己的帧会携带 TLS 里的“记录”，再加上 QUIC 使用的是 TLS/1.3，因此仅需 1 个 RTT 就可以「同时」完成建立连接与密钥协商。
+    - *连接迁移*：QUIC 协议没有用四元组的方式来“绑定”连接，而是通过**连接 ID**来标记通信的两个端点。
+- HTTPS：
+  - **信息加密**：非对称加密和对称加密的的混合加密方式实现了信息的机密性，解决了窃听的风险。
+  - **校验机制**：摘要算法**（哈希函数）**的方式来实现**完整性**，它能够为数据生成独一无二的「指纹」，指纹用于校验数据的完整性，解决了篡改的风险。
+  - **身份证书**：将服务器公钥放入到**数字证书**中，解决了冒充的风险。
+
+## 调度算法
+
+- 进程调度、内存页面置换算法、磁盘调度：[参考](https://xiaolincoding.com/os/5_schedule/schedule.html#%E8%BF%9B%E7%A8%8B%E8%B0%83%E5%BA%A6%E7%AE%97%E6%B3%95)
+
+## 动态分区分配算法
+
+- 首次适应算法：空闲分区以地址递增的次序排列。每次分配内存时顺序查找空闲分区链( 或空闲分[表)，找到大小能满足要求的第-一个空闲分区。
+- 最佳适应算法：空闲分区按容量递增次序链接。每次分配内存时顺序查找空闲分区链(或空闲分区表)，找到大小能满足要求的第-一个空闲分区。
+- 最大适应算法：空闲分区按容量递减次序链接。每次分配内存时顺序查找空闲分区链(或空闲分区表)，找到大小能满足要求的第-一个空闲分区。
+- 邻近适应算法：空闲分区以地址递增的顺序排列(可排成-一个循环链表)。每次分配内存时从上次查找结束的位置开始查找空闲分区链(或空闲分区表)，找到大小能满足要求的第一个空闲分区。
+
+
+
+## 数据库
+
+### 常用命令：
+
+```
+mysql -u root -p
+show databases
+use table
+exit
+```
+
+
+
